Safari 15 breaks all Web Audio content using WebM Opus https://bugs.webkit.org/show_bug.cgi?id=226922 rdar://79218243

Reviewed by Eric Carlson.

Temporarily reports that neither Opus and Vorbis audio codec are supported to allow
webaudio sites to fallback to other containers. The content will continue to play
as before. Will be reverted once bug 227110 lands.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::canPlayType const):


Canonical link: https://commits.webkit.org/239020@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279103 268f45cc-cd09-0410-ab3c-d52691b4dbfc