Source/WebCore/html/HTMLMediaElement.cpp
@@ -1045,6 +1045,14 @@ String HTMLMediaElement::canPlayType(const String& mimeType) const
     MediaPlayer::SupportsType support = MediaPlayer::supportsType(parameters);
     String canPlay;
 
+#if PLATFORM(COCOA)
+    // Temporarily work around bug 226922. For now claim that the opus and vorbis codecs aren't supported
+    // so that sites relying on this test to determine if webaudio use of opus or vorbis won't error.
+    auto codecs = contentType.codecs();
+    if (support == MediaPlayer::SupportsType::IsSupported && (codecs.contains("opus") || codecs.contains("vorbis")))
+        support = MediaPlayer::SupportsType::IsNotSupported;
+#endif
+
     // 4.8.10.3
     switch (support)
     {
